# DOORkaEngine

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  descr.lsd  discrimination.lsd  gitignore  main.cpp  svastika.lsd  test_bsp.lsd  test_bsp_plain.lsd  test_smth.lsd  test_tex.lsd  testlvl.lsd  testlvl.lvl
BSP/: BSP.cpp  BSP.h
camera/: camera.cpp  camera.h  common.h  position.cpp  position.h  todo
camera_example/: Makefile  camera_example.cpp  shader_source  sphere.cpp  sphere.h
editor/: cursor.cpp  cursor.h  editor.pro  editor.pro.user.0e5cecd  filename_enter.cpp  filename_enter.h  level.cpp  level.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ogl_out.cpp  ogl_out.h  opendialog.cpp  opendialog.h  opendialog.ui  sphere.cpp  sphere.h
level/: compress.cpp  compress.h  level_common.cpp  level_common.h  level_engine.cpp  level_engine.h
libraries/: map.h
libraries/core/: avl_yggdrasil.h
render/: BSP.cpp  BSP.h  a.out  render.cpp  render.h
shader_example/: Makefile  shader_example.cpp  sphere.cpp
